buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'org.jetbrains.intellij' version '1.16.1'
    id 'maven-publish'
    id 'signing'
}

wrapper {
    gradleVersion = '8.0.2'
}

group 'org.antlr'
version libraryVersion

apply plugin: 'java'
apply plugin: 'org.jetbrains.intellij'

compileJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
}

intellij {
    version.set(ideaVersion)

    pluginName.set('antlr4-intellij-adaptor')
    downloadSources.set(true)
    updateSinceUntilBuild.set(false)
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.antlr:antlr4-runtime:$antlr4Version") {
        exclude group:'com.ibm.icu', module:'icu4j'
    }
}

task sourcesJar(type: Jar) {
    from sourceSets.main.allJava
    archiveClassifier.set('sources')
}

task javadocJar(type: Jar) {
    from javadoc
    archiveClassifier.set('javadoc')
}

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'org.antlr'
            artifactId = 'antlr4-intellij-adaptor'
            version = libraryVersion

            from components.java
            artifact sourcesJar
            artifact javadocJar

            pom {
                name = 'ANTLRV4 adaptor for IntelliJ-based IDEs'
                description = 'Support for using ANTLR-generated parsers/lexers in IntelliJ-based IDE plug-ins.'
                url = 'https://github.com/antlr/antlr4-intellij-adaptor'
                licenses {
                    license {
                        name = 'BSD 2-Clause "Simplified" License'
                        url = 'https://github.com/antlr/antlr4-intellij-adaptor/blob/master/LICENSE'
                    }
                }
                developers {
                    developer {
                        id = 'parrt'
                        name = 'Terence Parr'
                        email = 'parrt@cs.usfca.edu'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/antlr/antlr4-intellij-adaptor.git'
                    developerConnection = 'scm:git:git@github.com:antlr/antlr4-intellij-adaptor.git'
                    url = 'https://github.com/antlr/antlr4-intellij-adaptor'
                }
            }

        }
    }
//    repositories {
//        maven {
//            url "https://oss.sonatype.org/${libraryVersion.contains("-SNAPSHOT") ? 'content/repositories/snapshots' : 'service/local/staging/deploy/maven2'}"
//            credentials {
//                username sonatypeUsername
//                password sonatypePassword
//            }
//        }
//    }
}

//signing {
//    sign publishing.publications.maven
//}


javadoc {
    if(JavaVersion.current().isJava9Compatible()) {
        options.addBooleanOption('html5', true)
    }
}
